--- a/matlab/makefile
+++ b/matlab/makefile
@@ -5,7 +5,7 @@ linux: linux-octave-64bit linux-matlab-64bit
 
 macosx: macosx-matlab-64bit
 
-windows: windows-matlab-32bit windows-matlab-64bit
+windows: windows-matlab-64bit
 
 linux-octave-64bit:
 	$(MAKE) -f makefile.mwrap TARGET=octave-linux-openmp clean
@@ -24,14 +24,10 @@ macosx-matlab-64bit:
 	$(MAKE) -f makefile.mwrap TARGET=matlab-maci64-openmp -j
 
 windows-matlab-32bit:
-	$(MAKE) -f makefile.mwrap TARGET=matlab-windows-w32 clean
-	$(MAKE) -f makefile.mwrap TARGET=matlab-windows-w32 -j
 	$(MAKE) -f makefile.mwrap TARGET=matlab-windows-w32-openmp clean 
 	$(MAKE) -f makefile.mwrap TARGET=matlab-windows-w32-openmp -j
 
 windows-matlab-64bit:
-	$(MAKE) -f makefile.mwrap TARGET=matlab-windows-w64 clean
-	$(MAKE) -f makefile.mwrap TARGET=matlab-windows-w64 -j
 	$(MAKE) -f makefile.mwrap TARGET=matlab-windows-w64-openmp clean 
 	$(MAKE) -f makefile.mwrap TARGET=matlab-windows-w64-openmp -j
 
